--- a/public/professor/profDoc.css
+++ b/public/professor/profDoc.css
@@ -136,7 +136,7 @@ button, input, textarea {
 }
 
 /* Aplicação Principal */
-.app-container {
+#app {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
