Arquivo .env criado para armazenar a chave da api e tirado display da pagina principal

--- a/public/professor/profDoc.css
+++ b/public/professor/profDoc.css
@@ -134,14 +134,14 @@ button, input, textarea {
 .login-button:hover {
     background-color: #1d4ed8;
 }
-
-/* Aplicação Principal */
+/*
+/* Aplicação Principal
 #app {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
-
+ */
 .app-header {
     background-color: var(--white);
     box-shadow: var(--shadow);
