--- a/public/admin/configADM.css
+++ b/public/admin/configADM.css
@@ -44,6 +44,7 @@
     --card-bg: #2d2d2d;
     --border-color: #4b5563;
     --light-gray: #2d2d2d;
+    --dark-gray: #292929;
     --medium-gray: #4b5563;
     --secondary-color: #9ca3af;
 
@@ -87,6 +88,12 @@
     font-weight: 600;
     color: #374151;
     font-size: 1.125rem;
+}
+
+/* No dark mode (as classes já estão definidas no seu CSS) */
+.dark-mode .role-title {
+    background-color: var(--dark-gray); /* #2d2d2d */
+    color: var(--text-color); /* #f4f6f3 */
 }
 
 /* Tabela e células */
